# Cruz3D

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json
cmake-modules/: Macros.cmake
cmake/Modules/: FindAssimp.cmake
data/: checker_board.blend  checker_board.mtl  metal_trash_can_4k.blend  metal_trash_can_4k.mtl
src/: CMakeLists.txt  ShaderDesc.h
src/Cruz3D/: CMakeLists.txt  Cruz3D.cpp  Cruz3D.h  Debug.h  Graphic.h  Input.cpp  Input.h  Settings.h  sokol.cpp  sokol_impl.cpp
src/Cruz3D/Graphic/: Camera.cpp  Camera.h  Importer.cpp  Importer.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Passes.h  Pipeline.cpp  Pipeline.h  Scene.cpp  Scene.h  Settings.h  Shader.h  ShaderDesc.h  SokolHelpers.inl  VertexBuffer.cpp  VertexBuffer.h
src/Cruz3D/Graphic/Passes/: SimpleBinding.cpp  SimpleBinding.h  SimplePass.cpp  SimplePass.h
src/Cruz3D/Ultility/: FileHelper.inl
src/Shaders/: BasicMVP.glsl  BasicMVP.glsl.h  CMakeLists.txt  test1.glsl  test1.glsl.h  test2.glsl.h
src/Test/: CMakeLists.txt  GameObjects.h  assimp_test.h  cube_test.h  main.cpp
